--- a/website1.html
+++ b/website1.html
@@ -42,3 +42,12 @@
     </div>
   </div>
 </body>
+</script>
+
+
+
+
+
+
+<script src="website1.js"></script>
+<link rel="stylesheet" href="website1.css">
